--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.66.3",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "react-native-responsive-dimensions": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -23,7 +24,8 @@
     "babel-jest": "^26.6.3",
     "prettier": "2.2.1",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "prop-types": "^15.7.2"
   },
   "prettier": {
     "tabWidth": 4,
