--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-uri": "^1.2.3",
     "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5",
-    "lodash-es": "^4.17.21",
-    "react-native-responsive-dimensions": "^3.1.1"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "prettier": "2.2.1",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2",
-    "prop-types": "^15.7.2"
+    "prettier": "2.2.1",
+    "prop-types": "^15.7.2",
+    "react-test-renderer": "17.0.2"
   },
   "prettier": {
     "tabWidth": 4,
