--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.66.3",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5"
@@ -24,6 +25,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "metro-config": "^0.66.2",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "2.2.1",
     "prop-types": "^15.7.2",
